Manifest with LAB 2

--- a/codelab-extensions/lab-2-hello-world/manifest.json
+++ b/codelab-extensions/lab-2-hello-world/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0",
     "author": "dfirence@",
     "name": "hello world",
-    "description": "hello world - basic",
+    "description": "hello world - lab 2",
     "icons": {
         "16": "icons/icon16.png"
     },
