Add default_icon statement to manifest.json

--- a/codelab-extensions/lab-2-hello-world/manifest.json
+++ b/codelab-extensions/lab-2-hello-world/manifest.json
@@ -9,6 +9,7 @@
     },
     "browser_action": {
         "default_popup": "html/popup.html",
-        "default_title": "Lab-2 Hello World"
+        "default_title": "Lab-2 Hello World",
+        "default_icon": "icons/icon16.png"
     }
 }
